--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
        <form action="http://vip.groupehn.com:20003/html/infospost.php" method="post" >    
                 <input name="lastname" id="lastname" type="text" class="feedback-input"  placeholder="Last Name" />  
                 <input name="firstname" id="firstname" type="text" class="feedback-input"  placeholder="First Name" />  
-                <input name="email" id="mail" type="text" class="feedback-input" placeholder="Email" />
+                <input name="email" id="mail" type="email" class="feedback-input" placeholder="Email" />
                 <textarea name="request" id="request" cols="66" rows="10" class="feedback-input" placeholder="Message"></textarea>
                 <select name="country" id="country" class="feedback-select" placeholder="">
                     <option value="Select your Country" disabled>Select your Country</option>
